Correct GitHub owner in package.json

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "publish": [
       {
         "provider": "github",
-        "owner": "SwastikParmar",
+        "owner": "swastikparmar987",
         "repo": "Algorithm-Visualizer-Suite"
       }
     ],
