Refine brand logo SVG to exact knot morphology

--- a/package.json
+++ b/package.json
@@ -19,6 +19,13 @@
       "output": "dist",
       "buildResources": "build"
     },
+    "files": [
+      "out/**/*",
+      "package.json",
+      "!venv",
+      "!venv_13",
+      "!python_legacy"
+    ],
     "publish": [
       {
         "provider": "github",
